<resources>
    <string name="app_name">MyNewsApp</string>
    <string name="favorite">favorite</string>
    <string name="search">search</string>
    <string name="headlines">headlines</string>
    <string name="local">Local</string>
    <string name="account">Account</string>
    <string name="countries">Countries</string>
    <string name="sources">Sources</string>
    <string name="topics">Topics</string>
    <string name="search_preferences">Search for your preferences</string>
    <string name="app_label">MyNewsApp</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="logout">Logout</string>
    <string name="country_not_found">Sorry this country can\'t be found. Showing general news</string>
    <string name="topic_not_found">Sorry this topic can\'t be found. Showing general news</string>
    <string name="source_not_found">Sorry this source can\'t be found. Showing general news</string>
    <string name="saved">Saved articles</string>
    <string name="account_name">Name:</string>
    <string name="account_email_address">Email address:</string>
    <string name="phone_number">Phone number:</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="add_preference_button">Add</string>
</resources>