<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/favorite_24px"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/headlines"
        android:icon="@drawable/public_24px"
        android:title="@string/headlines"
        app:showAsAction="always" />

    <item
        android:id="@+id/local"
        android:icon="@drawable/local_icon"
        android:title="@string/local"
        app:showAsAction="always" />

    <item
        android:id="@+id/account"
        android:icon="@drawable/settings_24px"
        android:title="@string/account"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
</menu>