<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/main_appbar"
            app:theme="@style/Theme.MyNewsApp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/topics"
                        android:textAlignment="center"
                        android:textStyle="bold">
                    </com.google.android.material.textview.MaterialTextView>

                    <ListView
                        android:id="@+id/topics_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </ListView>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/sources"
                        android:textAlignment="center"
                        android:textStyle="bold">
                    </com.google.android.material.textview.MaterialTextView>

                    <ListView
                        android:id="@+id/sources_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </ListView>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/countries"
                        android:textAlignment="center"
                        android:textStyle="bold">
                    </com.google.android.material.textview.MaterialTextView>

                    <ListView
                        android:id="@+id/countries_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </ListView>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton android:layout_height="wrap_content"
                android:id="@+id/preferences_add"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                app:icon="@drawable/add"
                android:text="Add"
                android:onClick="goToSearchPreferences">
            </com.google.android.material.button.MaterialButton>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>